--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -24,15 +15,89 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+.roomBack {
+  background-image: url(./backRoom.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dreamContainer {
+
+  box-sizing: border-box;
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  position: absolute;
+  background-color: #00000060;
+  width: 100vw;
+  height: 100vh;
+  transition: 1s;
+  
+
+}
+.☁ {
+  transition: 1s;
+  display: none;
+  position: relative;
+  flex-grow: 1;
+  flex-basis: 40%;
+  margin: 10px;
+  border-radius: 20px;
+  overflow: hidden;
+  background-color: aqua;
+  max-width: 60%;
+  max-height: 60%;
+  
+  
+}
+.dreamContainer.grid .☁{
+  display: block;
+}
+.☁.maximized {
+  display: block;
+  max-width: none;
+  max-height: none;
+}
+.options{
+  position: absolute;
+  left: 50%;
+  bottom:16px;
+  transform: translate(-50%, 0);
+}
+.streamContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 100%;
+  pointer-events: none;
+}
+.callOptions{
+  display: flex;
+  padding: 10px;
+  position:absolute;
+  left: 50%;
+  bottom:0px;
+  height: 80px;
+  overflow: hidden;
+  transform: translate(-50%, 0);
+  
+}
+.callOptions * {
+  color:white; 
+  margin: 5px;
+ 
+}
+.callOptions .showOptions{
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
