--- a/src/App.css
+++ b/src/App.css
@@ -51,10 +51,9 @@
   margin: 10px;
   border-radius: 20px;
   overflow: hidden;
-  background-color: aqua;
-  max-width: 60%;
+  background-color: #00ffff69;
+  max-width: 55%;
   max-height: 60%;
-
 
 }
 
@@ -66,6 +65,14 @@
   display: block;
   max-width: none;
   max-height: none;
+  width: 90%;
+  height: 95%;
+  margin:0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
 }
 
 .options {
@@ -82,7 +89,7 @@
   position: relative;
   height: 100%;
   pointer-events: none;
-  width: 300px;
+  width: 100%;
 
 }
 
@@ -115,8 +122,9 @@
 
 .🏠☁ {
   border-radius: 20px;
-  background-color: aquamarine;
+  background-color: #7fffd469;
   overflow: hidden;
+  width: 300px;
 
   z-index: 1000;
   position: absolute;
@@ -126,7 +134,7 @@
 .🎈 {
   position: absolute;
   margin:40px;
-  left: 75%;
+  left: 15%;
   top:65%;
 
 }
