--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,13 @@
   top:65%;
 
 }
+.loading{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
 body {
   overflow: hidden;
 }
