Queda por arreglar un error
El dict de directos no tiene la id correcta del usuario
Es posible que se esten generando 2 ids de usuario

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@
 }
 
 .☁ {
+  backdrop-filter: blur(10px);
   transition: 1s;
   display: none;
   position: relative;
@@ -54,7 +55,7 @@
   background-color: #00ffff69;
   max-width: 55%;
   max-height: 60%;
-
+  box-shadow: 0px 0px 41px -11px rgba(0,0,0,1);
 }
 
 .dreamContainer.grid .☁ {
