--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@
   margin: 10px;
   border-radius: 20px;
   overflow: hidden;
-  /*background-color: #00ffff69;*/
+  background-color: #00ffff69;
   max-width: 55%;
   max-height: 60%;
   box-shadow: 0px 0px 41px -11px rgba(0,0,0,1);
@@ -149,83 +149,22 @@ body {
 .userList{
   position:absolute;
   display: block;
-  transition: 3s;
-  
-  margin: 1rem;
-  bottom: 0;
-  left: 0;
-
-
-  overflow: auto;
-  color: white;
-  font-size: 20px;
-  font-weight: 600;
-  font-family: 'Roboto', sans-serif;
-
-  overflow: hidden;
+  border-radius: 10px;
+  bottom:15px;
+  right:15px;
+  opacity: 0;
   
 }
 .userList:hover{
   opacity: 100;
 }
-.userList  p{
-  transition:3s;
-  user-select: none;
-  cursor: pointer;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 0;
-  overflow: hidden;
-
-  max-width: 20vh;
-
-}
-.username{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  flex-direction: row;
-}
-.adminOptions{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  margin-right: 10px;
-}
-.username:hover{
-  background-color: #00000020;
-}
-.UsersTitle h3{
+.userList > div{
+  border-top: #00000060 solid 1px;
   padding: 10px;
-  transition:3s;
+  transition:0.3s;
   user-select: none;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-weight: 800;
-  text-align: center;
-  font-size: 20px;
-  width: 100%;
-
-  margin: 0;
 
 }
-
-@keyframes ocultar {
-  0%   {background-color: red;}
-  90%  {background-color: yellow;}
-}
-
-.UsersTitle{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #00000060;
-  top: 0;
-  z-index: 1000;
-}
-.userList > p:hover{
+.userList > div:hover{
   background-color: #00000020;
 }
