--- a/src/App.css
+++ b/src/App.css
@@ -168,3 +168,14 @@ body {
 .userList > div:hover{
   background-color: #00000020;
 }
+.☁.maximized .fullscreen{
+  top: 0px;
+  left: 0px;
+  z-index: 1000;
+}
+.☁ .fullscreen{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 1000;
+}
