--- a/src/App.css
+++ b/src/App.css
@@ -56,10 +56,8 @@
   max-width: 55%;
   max-height: 60%;
   box-shadow: 0px 0px 41px -11px rgba(0,0,0,1);
-}
-
-.dreamContainer.grid .☁ {
-  display: block;
+  display: flex;
+  justify-content: center;
 }
 
 .☁.maximized {
