--- a/src/App.css
+++ b/src/App.css
@@ -177,3 +177,32 @@ body {
   left: 10px;
   z-index: 1000;
 }
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #00000060;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  color: white;
+}
+
+.modal > button{
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  background-color: #00000060;
+  color: white;
+  transition: 0.3s;
+}
+.modal > button:hover{
+  background-color: #00000080;
+}
+
