--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
   width: 100vw;
   height: 100vh;
   transition: 1s;
-
+  padding-block: 10%;
 
 }
 
@@ -52,7 +52,7 @@
   margin: 10px;
   border-radius: 20px;
   overflow: hidden;
-  background-color: #00ffff69;
+  /*background-color: #00ffff69;*/
 
   box-shadow: 0px 0px 41px -11px rgba(0,0,0,1);
   display: flex;
@@ -64,6 +64,15 @@
 }
 .sideList{
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+.sideList > div{
+  border-top: #00000060 solid 1px;
+  padding: 10px;
+  transition:0.3s;
+  user-select: none;
+
 }
 .☁.maximized {
   display: flex;
@@ -92,6 +101,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+
 }
 
 .callOptions {
