--- a/src/App.css
+++ b/src/App.css
@@ -110,11 +110,13 @@
   width: 100% !important;
   align-items: center;
   display: flex;
+  justify-content: center;
 
 }
 .streamContainer  video{
   height: auto !important;
   max-height: 100% !important;
+  max-width: 100% !important;
 }
 .streamContainer{
   height: 100%;
